tests/compile_fail/display/unnamed_field_prefixed_with_dot.stderr
error: expected identifier or literal
 --> tests/compile_fail/display/unnamed_field_prefixed_with_dot.rs:2:30
  |
2 | #[display(fmt = "Stuff({})", .0)]
  |                              ^
